@@ -1,3 +1,7 @@
+2015-06-09  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* AUTH_MKHOMEDIR_SKEL setting: autocreate home directory.
+
 2015-05-12  "Hanno Böck" <hanno@hboeck.de>
 
 	* Fix gcc warnings.
